# IPThackathon

./: 300-presentation.pptx  KukaOutput-ICNAP.xlsx  OvenPrograms-ICNAP.xlsx  README.md  first task 2.ipynb  first task FIFO with temperature to solve draws.ipynb  first task FIFO.ipynb  first task.ipynb  pyproject.toml  second task.ipynb
