[tool.poetry]
name = "ipthackathon"
version = "0.1.0"
description = ""
authors = ["Pedro Yves"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.4.2"
numpy = "^1.22.3"
jupyter = "^1.0.0"
notebook = "^6.4.11"
plotly = "^5.8.0"
sympy = "^1.10.1"
matplotlib = "^3.5.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
